# Jarvis

./: .gitignore  README.md  pyproject.toml
ai_dev_team/: main.py
ai_dev_team/agents/: architect_agent.py  coder_agent.py  debug_agent.py  doc_agent.py  leader_agent.py  research_agent.py  tester_agent.py
ai_dev_team/api/: server.py
ai_dev_team/config/: settings.py
ai_dev_team/core/: agent_base.py  communication_protocol.py  task_manager.py
ai_dev_team/memory/: memory_manager.py  vector_memory.py
ai_dev_team/planner/: task_planner.py
ai_dev_team/tools/: code_executor.py  file_manager.py  git_tool.py  web_search.py
tests/: test_code_executor.py  test_communication.py  test_file_manager.py  test_planner.py  test_task_manager.py
